# RISC-V-Simulator

./: CMakeLists.txt  main.cpp
modules/: address_exceptions.h  alu.h  cmp.h  common.h  data_mem_unit.h  gates.h  instr_mem_unit.h  regfile.h
pipeline/: CMakeLists.txt  control_unit.h  hazard_unit.h  instruction.h  pipeline.cpp  pipeline.h  we_gen.h
tests/: instructions_test.cpp  integration_test.cpp
